# token-ring

./: CMakeLists.txt  README.md  main.cpp
token_ring/: CMakeLists.txt
token_ring/include/: base_agent.h  data.h  echo_agent.h  emulator.h  main_agent.h  simple_agent.h
token_ring/tests/: basic_agent_tests.h  common.h  emulator_stub.h  run.cpp  test_base_agent.cpp  test_data.cpp  test_echo_agent.cpp  test_emulator.cpp  test_main_agent.cpp  test_simple_agent.cpp
